ensemble suites.

+ gcontrol "View -> Suite Log" now works even if the suite was not
running when the GUI started up.

+ the "outputs" example suite was not validating due to use of old-style 
cycle time variable in output messages. The new release generator
script now aborts in case of non-validating examples.

+ The remote task execution mechanism now automatically sources
/etc/profile and $HOME/.profile on the remote host, if they exist.
This may make most previous use of the "initial scripting" config item
obsolete.

________________________________________________________________________
4.5.2 PENDING

+ The new delayed retry feature now works properly for cycling tasks
beyond the first cycle.

+ For ssh messaging, where remote messaging commands re-invoke
themselves on the suite host, the path to cylc on the suite host is now
transferred explicitly via the remote task job script - we no longer
rely on the user's .profile on the suite host for this.

+ New 'retry' event hook - calls the event handler if a task fails when
it has a retry lined up.

+ New User Guide sections under "Running Suites" to document "Automatic
Retry On Task Failure" and "Suite And Task Event Handling".

+ Initial and final cycle times: $CYLC_SUITE_INITIAL_CYCLE_TIME and
$CYLC_SUITE_FINAL_CYCLE_TIME now persist across restarts by default, but
the old value in the restart file can be ignored by command line option.
Values hardwired into the suite.rc file cannot be ignored. The
environment variables are now always defined, but may have the value
"None" if no value is set on the command line, state dump, or suite.rc
file. $CYLC_SUITE_INITIAL_CYCLE_TIME is only set by a cold start (and
thence persists through restarts), not by a warm start (which is really
a form of restart that does not explicitly reference a previous suite
state). In a warm start you can optionally push the value of "initial
cycle time", command line or suite.rc, through to the environment
variable.
