@@ -102,6 +102,7 @@ description = string( default="No description provided" )
         post-command scripting = string( default=None )
         manual completion = boolean( default=False )
         extra log files = force_list( default=list())
+        enable resurrection = boolean( default=False )
         [[[job submission]]]
             method = string( default=background )
             command template = string( default=None )
@@ -143,6 +144,7 @@ description = string( default="No description provided" )
         post-command scripting = string( default=None )
         manual completion = boolean( default=None )
         extra log files = force_list( default=list())
+        enable resurrection = boolean( default=None )
         [[[job submission]]]
             method = string( default=None )
             command template = string( default=None )
